# crypto-trading-agent

./: .dockerignore  .env.example  .gitignore  CHAT_HISTORY.txt  CLAUDE.md  Dockerfile  LICENSE  README.md  fix.py  pyproject.toml
configs/: config.default.yaml
data/: backtest_results.json  dashboard.html  monthly_backtest.json
src/agent/: __init__.py  backtest.py  config.py  dashboard.py  live.py  loop.py  main.py  monthly_backtest.py  run_backtest.py  server.py  state.py
src/agent/strategies/: __init__.py  base.py  bollinger_bands.py  consensus.py  dca_baseline.py  external_feeds.py  fear_greed.py  loader.py  macd.py  ml_meta_learner.py  network_activity.py  rsi.py  sma_crossover.py  volume_momentum.py
src/agent/strategies/src/agent/strategies/: fear_greed.py  ml_meta_learner.py
src/execution/: __init__.py  paper.py
src/market_data/: __init__.py  feed.py
src/portfolio/: __init__.py  manager.py
tests/: test_backtest.py  test_config.py  test_consensus.py  test_executor.py  test_live_dashboard.py  test_new_strategies.py  test_portfolio.py  test_strategy.py
